updating html file with featured image code

--- a/Missions_to_Mars/templates/mars_index.html
+++ b/Missions_to_Mars/templates/mars_index.html
@@ -41,6 +41,13 @@ function changedata(img)
   </div>
    <hr class="header-line">
 
+   <div class="row">
+
+    <div class="col-lg-7 listImageColumn">
+     <h3 class="sub-header-text1"> <strong>Featured Mars Image</strong></h3>
+     <img  class="listImage" src={{ mars.featured_image }} width="250px" height="500px"></img>
+      </div>
+
  <!--</div>-->
 </div>
 </div>
