--- a/Missions_to_Mars/templates/mars_index.html
+++ b/Missions_to_Mars/templates/mars_index.html
@@ -54,6 +54,35 @@ function changedata(img)
                {{ tables|safe }}
           </div>
        </div>
+       <hr class="header-line">  
+       <br>
+       <br>
+         <div class="col-lg-12 listImageColumn"> 
+          <h3 class="sub-header-text"> <strong>Mars Hemispheres</strong></h3>
+         <hr class="header-line">   
+       
+       <div class="col-lg-6 listImageColumn">
+        <img  class="listImage" src={{ mars.mars_hemis[0].img_url }} width="250px" height="500px"></img>
+        <h4 class="sub-header-text"> <strong>{{ mars.mars_hemis[0].title }}</strong></h4>
+         </div>
+      
+         <div class="col-lg-6 listImageColumn">
+          <img class="listImage" src={{ mars.mars_hemis[1].img_url }} width="250px" height="500px"></img>
+          <h4 class="sub-header-text"> <strong>{{ mars.mars_hemis[1].title }}</strong></h4>
+      
+         </div>
+       
+       <div class="col-lg-6 listImageColumn">
+       <img class="listImage" src={{ mars.mars_hemis[2].img_url }}  width="250px" height="500px"></img>
+       <h4 class="sub-header-text"> <strong>{{ mars.mars_hemis[2].title }}</strong></h4>
+       
+         </div>
+         
+         <div class="col-lg-6 listImageColumn">
+          <img class="listImage" src={{ mars.mars_hemis[3].img_url }} width="250px" height="500px"></img>
+          <h4 class="sub-header-text"> <strong>{{ mars.mars_hemis[3].title }}</strong></h4>
+          
+         </div>
 
 
  <!--</div>-->
